@@ -1,3 +1,8 @@
+2006-10-05 Joshua Tauberer <jit@occams.info>
+
+	* src/mod_mono.c: Prefix every alias with the name of the vhost.
+      XXGLOBALs between vhosts were getting mixed up.
+
 2006-08-31 Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* src/mod_mono.c: Fix problem in Solaris 9 due to alignment. Patch by
